# ALT_TestApp1

./: .gitignore  ALT_Test1.cbp  ALT_Test1.depend  ALT_Test1.layout  ALT_TestApp.spec  CMakeLists.txt  Makefile  README.md  client.cpp  main.cpp  spec_draft.spec  testlib.cpp  testlibforalt.h
.gear/: rules
RPM/: clientALT_test1-1.0-alt1.x86_64.rpm  libALT_test1-1.0-alt1.x86_64.rpm
SRPM/: clientALT_test1-1.0-alt1.src.rpm  libALT_test1-1.0-alt1.src.rpm
client/: ALT_test1  CMakeLists.txt  Makefile  client.cpp
include/: CurlWrapper.h  Package.h  SortMap.h  getPackageMap.h  stringUtils.h
src/: CMakeLists.txt  CurlWrapper.cpp  Package.cpp  SortMap.cpp  getPackageMap.cpp  stringUtils.cpp
